--- a/furufuruFruit/src/main/resources/static/csc/CSC.css
+++ b/furufuruFruit/src/main/resources/static/csc/CSC.css
@@ -95,6 +95,10 @@ section{
     width: 500px;
 }
 
+.contour > :nth-child(4){
+    margin-left: 30px;
+}
+
 .wrap-content{
     width: 100%;
     height: 800px;
@@ -120,6 +124,11 @@ section{
 .wrap-content > li > :nth-child(2){
     width: 500px;
     padding: 20px 10px;
+}
+
+
+.wrap-content > li > :nth-child(4){
+    margin-left: 30px;
 }
 
 
@@ -154,7 +163,7 @@ div[class="qs-info-content"] > textarea{
     height: 50px;
     border: none;
     color: white;
-    background-color: rgb(255,192,0);;
+    background-color: rgb(255,192,0);
     cursor: pointer;
     margin-top: 30px;
 }
@@ -162,4 +171,18 @@ div[class="qs-info-content"] > textarea{
 
 form > div{
     margin-bottom: 50px;
+}
+
+
+div[class="title"] > a{
+    border: none;
+    background-color: rgb(255,192,0);
+    color: white;
+    width: 100px;
+    height: 50px;
+    border-radius: 5px;
+    margin-left: 600px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 50px;
 }
