--- a/furufuruFruit/src/main/resources/templates/csc/CSC_form.html
+++ b/furufuruFruit/src/main/resources/templates/csc/CSC_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSC.css">
+    <link rel="stylesheet" th:href="@{csc/CSC.css}">
 </head>
 <body> 
     <!-- Menu -->
@@ -36,8 +36,9 @@
             <div class="main-bar">
                 <!-- title -->
                 <div class="title">
-                    <h1>공지사항</h1>
+                    <h1>1:1문의하기</h1>
                     <span>새로운 소식 및 유용한 정보를 만나보실 수 있습니다</span>
+                    <a th:href="@{/writing}">글쓰기</a> 
                 </div>
                 <!-- title end -->
 
