기능구현 연습중~.~

--- a/furufuruFruit/src/main/resources/templates/admin/admin_main.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_main.html
@@ -69,16 +69,6 @@
             </div>
         </div>
     </div>
-    <script>
-        const items = document.querySelectorAll(".item");
-
-        items[0].addEventListener('click', function(){
-            location.href = "admin_sub_user.html";
-        });
-
-        items[1].addEventListener('click', function(){
-            location.href = "admin_sub_center.html";
-        });
-    </script>
+    <script src="admin/admin_main.js"></script>
 </body>
 </html>
