[강일아] 메인페이지 폴더 정리 및 레이아웃 생성

--- a/furufuruFruit/src/main/resources/templates/csc/CSC_form.html
+++ b/furufuruFruit/src/main/resources/templates/csc/CSC_form.html
@@ -60,7 +60,7 @@
                     <li th:each="question, loop : ${paging}">
                         <div th:text="${paging.totalElements - (paging.number * paging.size) - loop.index}"></div>
                         <a th:href="@{|/detail/${question.id}|}" th:text="${question.title}"></a> 
-                        <div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm:ss')}"></div>
+                        <div th:text="${#temporals.format(question.question_date, 'yyyy-MM-dd HH:mm:ss')}"></div>
                         <div></div>
                     </li>
                     <li>
