--- a/furufuruFruit/src/main/resources/templates/main/main.html
+++ b/furufuruFruit/src/main/resources/templates/main/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>푸릇푸릇푸르츠 | 무친과일들</title>
-    <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" th:href="@{/main/logo.png}">
+    <link rel="stylesheet" type="text/css" th:href="@{/main/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css}" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>  
         
 /* ----------------기본설정------------------------ */        
@@ -98,7 +98,7 @@
 
         }   
             
-        .shopping-mypage >a{
+        .shopping-mypage-csc >a{
           width: 100px;
           height: 100px;
           position: relative;
@@ -266,15 +266,16 @@
         </header>
         <div class="top-bar">
             <div class="logo">
-              <img src="logobackground.png" alt="">
+              <img th:src="@{/main/logobackground.png}" alt="">
             </div>
             <div class="search">
               <input type="text" placeholder="검색어를 입력하세요.">
-              <img class="search-bnticon" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
+              <img class="search-bnticon" th:src="@{https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png}">
             </div>
-            <span class="shopping-mypage">
+            <span class="shopping-mypage-csc">
              <a href="#">장바구니</a>
              <a href="#">마이페이지</a>
+             <a th:href="@{/csc}">고객센터</a>
             </span>   
         </div>
 <!-- ------------------------------------------------- 네비게이션 바--------------------------------------------------------------- -->
@@ -311,13 +312,13 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="망고스틴.png" class="d-block w-100" alt="...">
+                  <img src="/main/망고스틴.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="비트.png" class="d-block w-100" alt="...">
+                  <img src="/main/비트.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="토마토.png" class="d-block w-100" alt="...">
+                  <img src="/main/토마토.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -336,19 +337,19 @@
         <div id="product-layout">
          <div class="product-link">
             <a href="#">과일
-              <img src="서클링크.jpg" alt="">              
+              <img src="/main/서클링크.jpg" alt="">              
             </a>
             <a href="#">채소
-              <img src="서클링크-채소.webp" alt="">
+              <img src="/main/서클링크-채소.webp" alt="">
             </a>
             <a href="#">생선
-              <img src="서클링크-생선.jpg" alt="">
+              <img src="/main/서클링크-생선.jpg" alt="">
             </a>
             <a href="#">쌀/잡곡
-              <img src="서클링크-쌀.jpg" alt="">
+              <img src="/main/서클링크-쌀.jpg" alt="">
             </a>
             <a href="#">우유
-              <img src="서클링크-우유.jpg" alt="">
+              <img src="/main/서클링크-우유.jpg" alt="">
             </a>
          </div>
        </div>           
@@ -364,7 +365,7 @@
             
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -378,7 +379,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -392,7 +393,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -406,7 +407,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -420,7 +421,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -434,7 +435,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -448,7 +449,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -462,7 +463,7 @@
             </div>
             <div class="col">
               <div class="card" style="cursor: pointer;" onclick="location.href='#';">
-                <img src="망고.jpg" class="card-img-top" alt="...">
+                <img src="/main/망고.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">
                     [델몬트][무친당도] <br>
@@ -522,7 +523,7 @@
 
     
 
-    <script src="bootstrap.min.js"></script>
-    <script src="main.js"></script>
+    <script src="/main/bootstrap.min.js"></script>
+    <script src="/main/main.js"></script>
 </body>
 </html>
