--- a/furufuruFruit/src/main/resources/templates/admin/admin_sub_user.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_sub_user.html
@@ -160,7 +160,7 @@
                 <span>2024-06-11</span>
             </div>
         </section>
-    </div>
-    <script src="../../static/admin/admin_sub_user"></script>
+    </div> 
+    <script src="admin/admin_sub_user"></script>
 </body>
 </html>
