--- a/furufuruFruit/src/main/resources/templates/admin/admin_sub_center_detail.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_sub_center_detail.html
@@ -109,16 +109,16 @@
             white-space: pre-wrap; /* 줄바꿈 설정 */
             line-height: 22px;
         }
-
+        
         /* 버튼 스타일 */
         .btn-style {
             margin-top: 20px;
             background-color: rgb(13, 110, 253);
             font-size: 17px;
             width: 90px;
-            height: 40px;
+            height: 60px;
             border: 0px;
-            border-radius: 5px;
+            border-radius: 3px;
             color: white;
             cursor: pointer;
         }
@@ -211,37 +211,7 @@
             </div>
         </section>
     </div>
-    <script>
-        const navBtns = document.querySelectorAll(".navBtn");
-        const answerBtn = document.querySelector("#answer-btn");
-
-        let answerTable = document.querySelector("#answer-table");
-        let nav = document.querySelector("nav");
-        let btnBox = document.querySelector("#btn-box");
-        let clearBtn = document.querySelector("#btn-clear");
-
-        let answerTitle = document.querySelector("#writing-td-text");
-        let answerContent = document.querySelector("#writing-td-textarea");
-
-        navBtns[0].addEventListener('click', function(){
-            location.href = "admin_sub_user.html";
-        });
-        navBtns[1].addEventListener('click', function(){
-            location.href = "admin_sub_center.html";
-        });
-
-        /* 답변 등록 버튼 클릭시 */
-        answerBtn.addEventListener('click', function(){
-            answerTable.style.display = "table";
-            nav.style.height = "1600px";
-            btnBox.style.display = "block";
-        });
-
-        /* 초기화 버튼 클릭시 */
-        clearBtn.addEventListener('click', function(){
-            answerTitle.value = "";
-            answerContent.value = "";
-        });
+    <script src="admin/admin_sub_center_detail.js">
     </script>
 </body>
 </html>
