--- a/furufuruFruit/src/main/resources/templates/csc/CSC_form2.html
+++ b/furufuruFruit/src/main/resources/templates/csc/CSC_form2.html
@@ -42,8 +42,9 @@
                 <!-- title end -->
 
                 <!-- Question form -->
+
                 <form class="Question" th:action="@{/csc/inquiry}" th:object="${questionForm}"  method="post">
-                    
+  
 
                     <!-- subject -->
                     <div class="qs-info-subject">
@@ -55,11 +56,13 @@
                     <!-- content-->
                     <div class="qs-info-content">
                         <h4>내용</h4>
+
                         <textarea th:field="*{contents}"></textarea>
+
                     </div>
                     <!-- content end -->
 
-                    <button type="submit">문의하기</button>
+                    <button th:onclick="|location.href='@{/csc}'|" type="submit">문의하기</button>
                 </form>
                 <!-- Question form end -->
             </div>
