--- a/furufuruFruit/src/main/resources/templates/admin/admin_main.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/bc8b36da76.js" crossorigin="anonymous"></script>
     <title>Document</title>
-    <style>  
+    <style  >  
         *{
             margin: 0px; padding: 0px;
         }
@@ -69,16 +69,6 @@
             </div>
         </div>
     </div>
-    <script>
-        const items = document.querySelectorAll(".item");
-
-        items[0].addEventListener('click', function(){
-            location.href = "admin_sub_user.html";
-        });
-
-        items[1].addEventListener('click', function(){
-            location.href = "admin_sub_center.html";
-        });
-    </script>
+    <script src="admin/admin_main.js"></script>
 </body>
 </html>
