--- a/furufuruFruit/src/main/resources/templates/admin/admin_sub_user.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_sub_user.html
@@ -161,15 +161,6 @@
             </div>
         </section>
     </div>
-    <script>
-        const navBtns = document.querySelectorAll(".navBtn");
-
-        navBtns[0].addEventListener('click', function(){
-            location.href = "admin_sub_user.html";
-        });
-        navBtns[1].addEventListener('click', function(){
-            location.href = "admin_sub_center.html";
-        });
-    </script>
+    <script src="admin/admin_sub_user.js"></script>
 </body>
 </html>
