--- a/furufuruFruit/src/main/resources/static/csc/CSC.css
+++ b/furufuruFruit/src/main/resources/static/csc/CSC.css
@@ -106,6 +106,11 @@ section{
     
 }
 
+.wrap-content a{
+    color: black;
+    text-decoration-line: none;
+}
+
 .wrap-content > li{
     display: flex;
     border-bottom: 1px solid lightgray;
