--- a/furufuruFruit/src/main/resources/static/login/login.css
+++ b/furufuruFruit/src/main/resources/static/login/login.css
@@ -102,7 +102,7 @@ div[class|="btn-signup"] > button{
     
 }
 
-div[class|="btn-signup"] > button > span{
+div[class|="btn-signup"] > button > div{
     color: rgb(255,192,0);
     
     
@@ -112,3 +112,8 @@ div[class|="finding"] > a{
     color: black;
 }
 
+.moveSignUp{
+    width: 100%;
+    height: 100%;
+    line-height: 60px;
+}
