[이순] 구현한거  - 상세페이지 -> 1:1문의로 이동  - 위시 버튼 클릭 -> 안내 메세지 띄움  - 장바구니 버튼 클릭 -> 안내 메세지, 장바구니로 이동
 예정
 - 네비바(레이아웃 파일 수정 후 추가 예정)
 - 풋터(네비바와 동일)
 - 물품 수량 버튼 클릭시 수량 변경 & 결제금액 변경

--- a/furufuruFruit/src/main/resources/templates/cart/cart.html
+++ b/furufuruFruit/src/main/resources/templates/cart/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" th:href="@{cart/cart.css}">
 </head>
 <body>
     <div id="header">
@@ -63,7 +63,7 @@
                             <p>[브룩클린688]호주산 목초육 치마살 구이용 300g(냉장)</p>
                         </div>
                         <div class="itemInfor">
-                            <img src="../1000000642_detail_024.jpg" class="itemImg">
+                            <img src="cart/1000000642_detail_024.jpg" class="itemImg">
                             <div class="itemCount">
                                 <p>11,990원</p>
                                 <button>- 1 +</button>
