--- a/furufuruFruit/src/main/resources/templates/admin/admin_sub_center.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_sub_center.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <header>
-        <a href="admin_main.html">푸릇 푸릇 푸르트</a>
+        <a th:href="@{/admin_main}">푸릇 푸릇 푸르트</a>
     </header>
     <div id="container">
         <nav>
@@ -165,23 +165,6 @@
             </div>
         </section>
     </div>
-    <script>
-        const navBtns = document.querySelectorAll(".navBtn");
-        const rows = document.querySelectorAll(".contentRows");
-
-        /* 왼쪽 네비 바 클릭했을 때 페이지 이동 */
-        navBtns[0].addEventListener('click', function(){
-            location.href = "admin_sub_user.html";
-        });
-        navBtns[1].addEventListener('click', function(){
-            location.href = "admin_sub_center.html";
-        });
-
-        /* 글의 레코드 클릭했을 때 페이지 이동 */
-        rows[0].addEventListener('click', function(){
-            location.href = "admin_sub_center_detail.html";
-        });
-
-    </script>
+    <script src="/admin/admin_sub_center.js"></script>
 </body>
 </html>
