--- a/furufuruFruit/src/main/resources/templates/signup/signup_form.html
+++ b/furufuruFruit/src/main/resources/templates/signup/signup_form.html
@@ -98,7 +98,7 @@
               
               <!-- gender -->
               <div class="gender">
-                  <input th:field="*{gender}" type="radio" name=" " value="man" />
+                  <input th:field="*{gender}" type="radio" name="gender" value="man" />
                   <label for="men">남성</label>
                   <input th:field="*{gender}" type="radio" name="gender" value="girl"/>
                   <label for="women">여성</label>
