--- a/furufuruFruit/src/main/resources/templates/main/main.html
+++ b/furufuruFruit/src/main/resources/templates/main/main.html
@@ -1,7 +1,13 @@
-
-<html layout:decorate="~{layout/layout}">
-<div layout:fragment="content">
-<style>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>푸릇푸릇푸르츠 | 무친과일들</title>
+    <link rel="icon" th:href="@{/main/logo.png}">
+    <link rel="stylesheet" type="text/css" th:href="@{/main/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css}" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>  
         
 /* ----------------기본설정------------------------ */        
         
@@ -22,7 +28,128 @@
 
 /* ------------------헤더 파트---------------------------- */        
 
+        header{
+            background-color: rgb(255,192,0);
+            width: 100%;
+            height: 50px;
+            
+        }
 
+
+        header > a {
+            position: relative;
+            left: 1250px;
+            top: 15px;
+            text-decoration: none;
+            color: green;
+            width: 50%;
+            height: 100%;
+        
+          }
+
+
+/* ------------------탑 바 파트(로고, 서치바, 쇼핑, 마이페이지)---------------------------- */
+
+        .top-bar{
+            
+            width: 100%;
+	          height: 100px; 
+            background-color:rgb(255,192,0) ;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+        }
+
+        .logo{
+          width: 100px;
+          height: 100px;
+          display: inline;
+          position: relative;
+          right: 350px;
+          bottom: 50px;
+        }
+
+        .logo > img{
+          height: 120%;
+          
+        }
+
+        .search {
+           position: relative;
+           width: 500px;
+           
+        }
+
+        input {
+        width: 100%;
+        border: 1px solid green;
+        border-radius: 8px;
+        padding: 10px 12px;
+        font-size: 14px;
+        }
+
+        .search-bnticon {
+         position : absolute;
+         width: 17px;
+         top: 10px;
+         right: 12px;
+         margin: 0;
+
+        }   
+            
+        .shopping-mypage-csc >a{
+          width: 100px;
+          height: 100px;
+          position: relative;
+          left: 100px;
+          text-decoration: none;
+            color: green;
+          
+        }
+/* ------------------네비게이션 파트 (카테고리, 신상품, 베스트, 이벤트)---------------------------- */       
+
+        nav{
+            width: 100%;
+           
+        }
+
+        .category{
+          width: 200px;
+          height: 50px;
+          position: relative;
+          left: 250px;
+          z-index: 2;
+        }
+
+       a > h5 {
+        height: 55px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       }
+
+       #cBox:hover > a ~ div > a {
+        display: block;
+        
+       }
+
+       #cBox > div > .list-group-item-light {
+        display: none;
+        z-index: 2;
+        
+       }
+
+
+        .new-best-event > a{
+          position: relative;
+          left: 500px;
+          bottom: 25px;
+          margin: 0px 0px 0px 100px;
+          font-size: 20px;
+          text-decoration: none;
+          color: green;
+        }
 
 
 /* -------------------------- 슬라이드 바------------------------------------- */
@@ -127,11 +254,58 @@
 
   </style>
 
+        
+    </style>
+</head>
+<body>
     <div class="wrapper">
       <div class="wrap">
-        
+        <header>
+          <a href="#">회원가입</a>
+          <a href="">로그인</a> 
+        </header>
+        <div class="top-bar">
+            <div class="logo">
+              <img th:src="@{/main/logobackground.png}" alt="">
+            </div>
+            <div class="search">
+              <input type="text" placeholder="검색어를 입력하세요.">
+              <img class="search-bnticon" th:src="@{https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png}">
+            </div>
+            <span class="shopping-mypage-csc">
+             <a href="#">장바구니</a>
+             <a href="#">마이페이지</a>
+             <a th:href="@{/csc}">고객센터</a>
+            </span>   
+        </div>
 <!-- ------------------------------------------------- 네비게이션 바--------------------------------------------------------------- -->
-        
+        <nav>
+          <div class="category">
+            <div id="cBox" class="list-group">
+              <a href="#" class="list-group-item list-group-item-action">
+                <h5>카테고리</h5>
+              </a>            
+              <div>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">쌀/견과</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">채소/잡곡</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">생선</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">쌀/잡곡</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">우유</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">우유</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">김치</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">홍삼</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">전통주</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">밀키트</a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-light">가공식품</a>
+              </div>
+            </div>
+          </div>
+          <div class="new-best-event">
+            <a href="#">신상품</a>
+            <a href="#">베스트</a>
+            <a href="#">이벤트</a>
+          <div>
+        </nav>
  <!-- ------------------------------------------슬라이드 바---------------------------------------------------------------------- -->       
         <div id="slide-layout">
           <div class="slide-bar">
@@ -312,10 +486,30 @@
     
 
         </div>
-        </html> 
+        </div> 
         
 
 <!---------------------------------------------------------------------------  -->
+<div class="container">
+<footer class="py-3 my-4">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">홈</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">고객센터</a></li>
+    <li class="nav-item">
+      <h6 class="nav-link px-2 text-body-secondary">
+        <p>Contact us</p> 
+        <p>Email qw1234@fff.com</p>
+           010-1234-5678
+      </h6></li>
+    
+  </ul>
+  <p class="text-center text-body-secondary">&copy; 2024 Bteam Company, Inc</p>
+</footer>
+</div>
+
+
+
+
 
 
 
@@ -327,10 +521,9 @@
       </div>  
     </div>
 
-   
-
-    <script src="/main/bootstrap.min.js"></script>
     
 
-</div>
+    <script src="/main/bootstrap.min.js"></script>
+    <script src="/main/main.js"></script>
+</body>
 </html>
