--- a/furufuruFruit/src/main/resources/templates/mypage/saleuser_productinquiry_detail.html
+++ b/furufuruFruit/src/main/resources/templates/mypage/saleuser_productinquiry_detail.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>푸릇푸릇 푸르츠</title>
-    <link rel="stylesheet" th:href="@{/mypage/saleuser_productinquiry_detail.css}">
-  
+    <link rel="stylesheet" href="saleuser_productinquiry_detail.css">
 </head>
 <body>
     <header class="header">
@@ -48,14 +47,14 @@
         <aside class="sidebar">
             <h2>상품관리</h2>
             <ul>
-                <li><a th:href="@{/mypage/Sellmypagse/inquiry}" >상품 문의 </a></li>
-                <li><a th:href="@{/mypage/Sellmypage}">상품 등록 </a></li>
-                <li><a th:href="@{/mypage/Sellmypage/updatecheck}" >상품 조회/수정 </a></li>
+                <li><a href="#" >상품 문의 </a></li>
+                <li><a href="#" >상품 등록 </a></li>
+                <li><a href="#" >상품 조회/수정 </a></li>
             </ul>
             <hr>    <!--가로선으로 나누기 위함-->
             <h2>주문/배송</h2>
             <ul>
-                <li><a th:href="@{/mypage/Sellmypage/orderdetail}">주문내역</a></li>
+                <li><a href="#">주문내역</a></li>
                
             </ul>
             <hr>    <!--가로선으로 나누기 위함 -->
