--- a/furufuruFruit/src/main/resources/templates/admin/admin_sub_center_detail.html
+++ b/furufuruFruit/src/main/resources/templates/admin/admin_sub_center_detail.html
@@ -160,7 +160,7 @@
 </head>
 <body>
     <header>
-        <a th:href="@{/admin_main}">푸릇 푸릇 푸르트</a>
+        <a href="admin_main.html">푸릇 푸릇 푸르트</a>
     </header>
     <div id="container">
         <nav>
@@ -211,6 +211,37 @@
             </div>
         </section>
     </div>
-    <script src="/admin/admin_sub_center_detail.js"></script>
+    <script>
+        const navBtns = document.querySelectorAll(".navBtn");
+        const answerBtn = document.querySelector("#answer-btn");
+
+        let answerTable = document.querySelector("#answer-table");
+        let nav = document.querySelector("nav");
+        let btnBox = document.querySelector("#btn-box");
+        let clearBtn = document.querySelector("#btn-clear");
+
+        let answerTitle = document.querySelector("#writing-td-text");
+        let answerContent = document.querySelector("#writing-td-textarea");
+
+        navBtns[0].addEventListener('click', function(){
+            location.href = "admin_sub_user.html";
+        });
+        navBtns[1].addEventListener('click', function(){
+            location.href = "admin_sub_center.html";
+        });
+
+        /* 답변 등록 버튼 클릭시 */
+        answerBtn.addEventListener('click', function(){
+            answerTable.style.display = "table";
+            nav.style.height = "1600px";
+            btnBox.style.display = "block";
+        });
+
+        /* 초기화 버튼 클릭시 */
+        clearBtn.addEventListener('click', function(){
+            answerTitle.value = "";
+            answerContent.value = "";
+        });
+    </script>
 </body>
 </html>
