--- a/furufuruFruit/src/main/resources/templates/detail_page/detailPage.html
+++ b/furufuruFruit/src/main/resources/templates/detail_page/detailPage.html
@@ -36,7 +36,7 @@
 
         
         <div class="mainInfor">
-            <div style="width: 490px; font-size: x-large;">[수제케이크]솔크라서 군침이 싹도노</div>
+            <div id="productId" style="width: 490px; font-size: x-large;">[수제케이크]솔크라서 군침이 싹도노</div>
             <div class="mainPrice">
                 <h2>
                     <span style="color: rgb(255, 99, 99);">9724%</span>
@@ -78,9 +78,9 @@
                     <div class="itemTitle">[수제케이크]솔크라서 군침이 싹도노</div>
                     <div class="itemCount">
                         <div class="countbtn">
-                            <button class="btnMinus"> - </button>
-                            <div> 1 </div>
-                            <button class="btnPlus"> + </button>
+                            <button class="minusbtn"> - </button>
+                            <div> <input type="text" style="width: 2rem;"></div>
+                            <button class="plusbtn"> + </button>
                         </div>
                         <div>9,724원</div>
                     </div>
