--- a/furufuruFruit/src/main/resources/static/signup/signup.css
+++ b/furufuruFruit/src/main/resources/static/signup/signup.css
@@ -8,27 +8,16 @@ a{
     text-decoration: none;
 }
 
-header{
-    width: 100%;
-    height: 150px;
-    /* border: 3px solid black; */
-}
-
 section{
     width: 100%;
-    height: 600px;
+    height: 1700px;
     /* border: 3px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.menu{
-    width: 100%;
-    background-color: orange;
-}
-
-.container {
+.signupcontainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +26,7 @@ section{
     margin-top: 110px;
     background: #ffffff;
     border: 1px;
-    margin-top: 900px;
+
 }
   
 .header {
@@ -135,6 +124,11 @@ select.box {
 
   }
   
+.btn-signup{
+	display: flex;
+	justify-content: center;
+}  
+
 .user-info-email input{
     width: 100px;
 
