--- a/furufuruFruit/src/main/resources/templates/main/main.html
+++ b/furufuruFruit/src/main/resources/templates/main/main.html
@@ -19,12 +19,7 @@
 
        
         }
-
-/* ------------------헤더 파트---------------------------- */        
-
-
-
-
+        
 /* -------------------------- 슬라이드 바------------------------------------- */
 
         .slide-bar{
@@ -60,6 +55,7 @@
           margin: 0px auto;
         }
 
+/* ---------------------------------서클형 링크---------------------------------------- */
 
         #product-layout{
           
@@ -101,7 +97,7 @@
           object-fit: cover;
                 }  
 
-/* ---------------------------------------------------------------------------------- */
+/* ---------------------------------상품진열---------------------------------------- */
         h2{
           width: 500px;
           height: 100px;
@@ -130,7 +126,7 @@
     <div class="wrapper">
       <div class="wrap">
         
-<!-- ------------------------------------------------- 네비게이션 바--------------------------------------------------------------- -->
+
         
  <!-- ------------------------------------------슬라이드 바---------------------------------------------------------------------- -->       
         <div id="slide-layout">
