--- a/furufuruFruit/src/main/resources/static/signup/signup.css
+++ b/furufuruFruit/src/main/resources/static/signup/signup.css
@@ -76,11 +76,36 @@ section{
     margin-top: 0px;
 }
   
-.gender label {
+.userinfo label {
     font-weight: 400;
     font-size: 16px;
 }
+
+.userinfo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 150px;
+    height: 23.94px;
+    padding: 30px 0px;
+    line-height: 20px;
+    margin-top: 10px;
+
+}
   
+.userinfo input {
+    width: 20px;
+    height: 20px;
+    background: #ebebeb;
+    border: 1px solid #d2d2d2;
+    margin-top: 0px;
+}
+  
+.userinfo label {
+    font-weight: 400;
+    font-size: 16px;
+}
+
 .agree-check {
     width: 450px;
     height: 40px;
